Updated database URI after migrating to Supabase; Updated employees table fields

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-DATABASE_URL=postgresql://postgres:VS92CpeZD399Pw52@reservedly-manifest-cowfish.data-1.usw2.tembo.io:5432/postgres
+# Supabase Direct connection
+#DATABASE_URL=postgresql://postgres:T*LGmP8kidp2JdL@db.opyktafaivpyhpbtzjnm.supabase.co:5432/postgres
+
+# Supabase Session pooler connection
+DATABASE_URL=postgresql://postgres.opyktafaivpyhpbtzjnm:T*LGmP8kidp2JdL@aws-0-us-west-1.pooler.supabase.com:5432/postgres
+MERCHANT_ID=75J4QRJB37Q41
+AUTHORIZATION_TOKEN=Bearer 6d2f77ca-647a-c337-ef46-cd2e0eb93ef3
